[INFER] Allow analysis/compilation of top level <script>, bug 662704.